# Thesis-Idea-Hyperparameter-Optimization

./: .gitignore  HPO_QuadTree_v1.py  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_LGSV3.md  ParamSpace.py  README.md  README_IMPROVEMENTS.md  VISUAL_SUMMARY.md  alba_framework_local_changes.patch  benchmark_results.csv  esempio_split_theorem.py  pyproject.toml  tabular_output.txt
.github/: copilot-instructions.md
alba_framework_potential/: drilling.py  leaf_selection.py  lgs_fixed.py
future_work/: dimensional_correlation.txt  punti_deboli_cube.txt
spiegazioni/: alba_grid_heatmap_plan.md  delta_gamma_teach.md
thesis/: ALBA_V1 copy 2.py  ALBA_V1.py  ALBA_V1_evo.py  ALBA_V1_old.py  ALBA_V1_thompson_all.py  ALBA_V2.py  ALBA_V3.py  ALBA_V4.py  SCALING_LAWS_RESEARCH.md  absolute_best_cifar10.pkl  absolute_maximum_cifar10.pkl  advanced_benchmark copy.py  advanced_benchmark.py  analyze_coherence_flow.py  bench_lgs_paramnet.py  bench_lgs_v3_paramnet.py  bench_v1_v3_optuna.py  benchmark_alba_base_vs_coherence.py  benchmark_alba_coherence_vs_turbo_synthetic.py  benchmark_alba_evo_vs_orig.py  benchmark_alba_grid_experimental_sphere_rosen_quick.py  benchmark_alba_grid_experimental_synthetic.py  benchmark_alba_old_vs_new.py  benchmark_alba_v3_vs_orig.py  benchmark_cat_interaction.py  benchmark_coherence_real_training.py  benchmark_coherence_smooth_vs_discretized.py  benchmark_coherence_smooth_vs_rugged.py  benchmark_coherence_vs_gravity_surrogate_synthetic.py  benchmark_coherence_vs_optuna_jahs.py  benchmark_coherence_vs_optuna_nn_tabular.py  benchmark_coherence_vs_optuna_paramnet.py  benchmark_convergence_jahs.py  (+148 more)
thesis/alba_dist/: INSTALL.md  README.md  pyproject.toml
thesis/alba_dist/alba_framework/: __init__.py  candidates.py  cube.py  gamma.py  leaf_selection.py  local_search.py  optimizer.py  param_space.py
thesis/alba_dist/alba_framework/examples/: quick_demo.py
thesis/alba_dist/alba_framework_potential/: categorical.py  coherence.py  gamma.py  lgs.py  optimizer.py
(+1327 files in other folders)
