[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alba-framework"
version = "1.0.0"
description = "ALBA — Adaptive Local Bayesian Algorithm for Hyperparameter Optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thesis Implementation"},
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.4",
]

[tool.setuptools.packages.find]
include = ["alba_framework_potential*"]
exclude = ["tests*", "tools*", "thesis*"]
